@@ -8,10 +8,10 @@ PH_DOVECOT_LMTP_LOG_FILE {
     missingok
 
     # Use bzip2 for compress.
-    compresscmd $(which bzip2)
-    uncompresscmd $(which bunzip2)
-    compressoptions -9
-    compressext .bz2
+    #compresscmd bzip2
+    #uncompresscmd bunzip2
+    #compressoptions -9
+    #compressext .bz2
 
     postrotate
         doveadm log reopen
