@@ -6,10 +6,10 @@ PH_OPENLDAP_LOGFILE {
     missingok
 
     # Use bzip2 for compress.
-    compresscmd $(which bzip2)
-    uncompresscmd $(which bunzip2)
-    compressoptions -9
-    compressext .bz2
+    #compresscmd bzip2
+    #uncompresscmd bunzip2
+    #compressoptions -9
+    #compressext .bz2
 
     postrotate
         PH_SYSLOG_POSTROTATE_CMD
