@@ -2,6 +2,7 @@ iRedMail-0.9.6:
     * Fixed issues:
         - Postfix:
             - Cannot deliver email to system account.
+        - Incorrect compress command used in logrotate config files.
         - Incorrect default password scheme for OpenLDAP backend if module
           'pw-sha2' is not available.
 
